# project_def_rpga

./: AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: attack.toml  default.toml  foundation.toml
docker/: Dockerfile  docker-compose.yml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: uv_sync_cuda.sh  uv_sync_mac.sh
src/anima_def_rpga/: __init__.py  serve.py
src/anima_def_rpga/api/: __init__.py
src/anima_def_rpga/assets/: __init__.py  manifest.py
src/anima_def_rpga/attack/: __init__.py  losses.py  masking.py  optimizer.py  regularizers.py
src/anima_def_rpga/cli/: __init__.py  check_assets.py
src/anima_def_rpga/config/: __init__.py  settings.py
src/anima_def_rpga/scene/: __init__.py  checkpoint_loader.py  gaussian_state.py
src/anima_hachiman/: __init__.py  device.py  version.py
tasks/: PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0304.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0404.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0504.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0604.md  PRD-0701.md  PRD-0702.md  PRD-0703.md  PRD-0704.md
tests/: test_core_attack.py  test_foundation_config.py
