[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-hachiman"
version = "0.1.0"
description = "ANIMA HACHIMAN — Robust Physical-World Adversarial Camouflage via 3DGS"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
mlx = ["mlx>=0.10", "mlx-nn"]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py310"
